--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,127 +1,42 @@
-/* import font */
+/* import font family from google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-/* Basic Reset */
+/* default styles */
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
-
-/* Navbar Container */
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #333;
-  color: #fff;
-  padding: 1rem;
-  font-family: 'Poppins', sans-serif;
-  height: 70px;
-}
-
-/* Logo */
-.navbar-logo {
-  font-size: 1.5rem;
-  font-weight: bold;
-  color: #fff;
-  width: 200px;
-  cursor: pointer;
-}
-
-.navbar-logo img {
-  height: 80px;
-  margin-top: 15px;
-}
-
-/* Links Styling */
-.navbar-links {
   list-style: none;
-  display: flex;
+  text-decoration: none;
+  box-sizing: border-box;
+  color: #fff;
 }
 
-.navbar-links li {
-  position: relative;
-  margin: 0 1rem;
+/* styling navbar */
+.c{
+  font-family: 'Poppins', sans-serif;
+  background: #222;
 }
 
-.navbar-links a {
+nav{
+  width: 98%;
+}
+
+.logo{
+  height: 80px;
+  margin-top: 12px;
+}
+
+.link{
   color: #fff;
   text-decoration: none;
-  font-size: 1rem;
-  transition: color 0.3s ease;
 }
 
-.navbar-links a:hover {
-  color: #18c549;
+.list{
+  display: flex;
+  gap: 35px;
+  align-items: center;
 }
 
-/* Dropdown Styling */
-.dropdown-menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: #444;
-  border-radius: 4px;
-  list-style: none;
-  min-width: 150px;
-  padding: 0.5rem 0;
-  display: none;
-}
-
-.dropdown:hover .dropdown-menu {
-  display: block;
-}
-
-.dropdown-menu li {
-  padding: 0.5rem 1rem;
-}
-
-.dropdown-menu li a {
-  color: #fff;
-  font-size: 0.9rem;
-  display: block;
-}
-
-.dropdown-menu li a:hover {
-  background-color: #555;
-  color: #ddd;
-}
-
-/* Responsive Navbar */
-.navbar-toggle {
-  display: none;
-  cursor: pointer;
-  font-size: 1.5rem;
-  margin-right: 40px;
-}
-
-@media (max-width: 1000px) {
-  .navbar-links {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 60px;
-    right: 0;
-    background-color: #333;
-    width: 100%;
-  }
-
-  .navbar-links li {
-    margin: 0.5rem 0;
-    text-align: center;
-  }
-
-  .navbar-toggle {
-    display: block;
-    color: #fff;
-  }
-
-  .navbar-links.show {
-    display: flex;
-  }
-
-  .dropdown-menu {
-    position: static;
-  }
+.d{
+  margin: 0 30px;
 }
