--- a/src/components/MainPage/MainPage.module.scss
+++ b/src/components/MainPage/MainPage.module.scss
@@ -28,7 +28,7 @@
     font-family: "Swis721 Win95BT" sans-serif;
     font-weight: bold;
     span {
-      color: #05fd42;
+      color: green;
     }
     p {
       font-size: 87px;
@@ -40,10 +40,6 @@
     font-weight: 700;
     font-size: 34px;
     color: #f2f2f2;
-  }
-
-  button {
-    border: 1px solid #05fd42 !important;
   }
 }
 @media screen and (min-width: 2250px) {
