--- a/src/app.scss
+++ b/src/app.scss
@@ -5,11 +5,17 @@
   text-decoration: none;
 }
 
-// import font family
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@font-face {
+  font-family: 'Swis721 Win95BT"';
+  src: url("./font/swiss721bt_bold.ttf") format("ttf"),
+    url("./font/swiss721bt_bolditalic.ttf") format("ttf"),
+    url("./font/swiss721bt_italic.ttf") format("ttf"),
+    url("./font//swiss721bt_roman.ttf") format("ttf");
+  /* Дополнительные стили шрифта, если необходимо */
+}
 
 body {
   background: #262626;
-  font-family: "Poppins", sans-serif;
+  font-family: "Swis721 Win95BT" sans-serif;
   color: #f2f2f2;
 }
