--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -3,8 +3,15 @@
   height: fit-content;
   padding-bottom: 66px;
   padding-top: 45px;
+
+  //  height: 1400px;
   overflow: hidden;
-  background: linear-gradient(180deg, #262626 14.46%, #05fd42 100%);
+  background: linear-gradient(180deg, #262626 14.46%, #6b8c49 100%);
+
+  // background: url('./about.png');
+  // background-repeat: no-repeat;
+  // background-position: center;
+  // background-size: cover;
 
   .aboutLeft {
     display: flex;
@@ -117,7 +124,7 @@
       justify-content: center;
       align-items: center;
       flex-direction: column-reverse;
-      h2 {
+      h2{
         width: 80%;
         margin: 0 auto;
         margin-bottom: 30px;
@@ -128,7 +135,7 @@
         text-align: left;
         white-space: normal !important;
       }
-      div {
+      div{
         width: 100% !important;
         margin-top: 36px;
       }
@@ -139,7 +146,7 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      h2 {
+      h2{
         width: 80%;
         margin: 0 auto;
         margin-bottom: 30px;
@@ -153,7 +160,7 @@
       img {
         width: 100%;
       }
-      div {
+      div{
         width: 100%;
         margin-top: 36px;
       }
