our it school website

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -6,7 +6,7 @@
 
   //  height: 1400px;
   overflow: hidden;
-  background: linear-gradient(180deg, #262626 14.46%, #6b8c49 100%);
+  background: linear-gradient(180deg, #262626 14.46%, #00df3c 100%);
 
   // background: url('./about.png');
   // background-repeat: no-repeat;
