--- a/src/components/CompanyList/Company.module.scss
+++ b/src/components/CompanyList/Company.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   height: 100px; 
-  background:  rgba(150, 217, 102, 0.20);
+  background:  #262626;
   .listTicker{
     display: flex;
     align-items: center;
@@ -25,6 +25,7 @@
       filter: grayscale(10);
       transition: 0.3s;
       &:hover{ 
+        cursor: pointer;
       
       filter: grayscale(0);
   
